
[project]
name = "build_tools"
version = "0.1.0"
description = "Hello world"

# repository = "..."

readme = "README.md"
requires-python = ">=3.10"
# dependencies = ["request"]


[project.optional-dependencies]
# dev = [""]
test = ["pytest"]

[build-system]
# Defaults
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"



