
[project]
name = "build_tools"
version = "0.1.2"
description = "A workspace build api for Python."

# repository = "..."

readme = "README.md"
requires-python = ">=3.10"
dependencies = ["build"]


[project.optional-dependencies]
# dev = [""]
test = ["pytest"]

[build-system]
# Defaults
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"



